# week1-project

./: DKTatlas_ThickAvg.csv  DataCleaning.ipynb  README.md  Tien.ipynb  analysis.ipynb  deepa-template.ipynb  pyproject.toml  week1-project_Annika.ipynb
results/: README.md  group-6.tsv
src/: README.md
